# cli_farm

./: Cargo.toml  README.md  backlog.md  save.json
src/: cli.rs  farm.rs  lib.rs  main.rs  util.rs
