[package]
name = "cli_farm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
crossterm = "0.27.0"
serde = {version = "1.0.108", features = ["derive"]}
serde_json = { version = "1.0.108" }
strum = { version = "0.25.0", features = ["derive"] }
